Fix button alignment in gamble winnings to make responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ header {
     max-height: 150px;
     border-radius: 5px;
     box-shadow: 3px 3px 5px;
-
 }
 
 nav {
@@ -26,7 +25,6 @@ nav {
     align-items: center;
     width: 100%;
     justify-content: flex-end;
-
 }
 
 nav li {
@@ -105,7 +103,7 @@ p.hands.no-mt {
     margin-top: 0;
 }
 
-.instructions, .winnings-half, .error-bg{
+.instructions, .winnings-half, .error-bg {
     background-color: #081c0c78;
     margin: 0;
 }
@@ -214,14 +212,14 @@ p.hands.no-mt {
 
 .game-controls {
     display: inline-block;
-    width: 33%;
-    padding: 0;
+    width: 100%;
+    padding: 5px 0;
     font-size: 20px;
     text-align: center;
 }
 
 button {
-    font-size: 20px;
+    font-size: 18px;
     background-color: white;
     border: 1px solid white;
     color: black;
@@ -339,16 +337,26 @@ footer p a:hover {
     .card .suit {
         width: 100%;
     }
+    #winnings {
+        width: 100%
+    }
 }
 
 @media screen and (min-width: 400px) {
     .card.face-down {
         background-position-x: 5px;
     }
+    button {
+        font-size: 20px;
+    }
 }
 
-
 @media screen and (min-width: 820px) {
+    .game-controls {
+        width: 33%;
+        padding: 0;
+    }
+    
     .card {
         margin: 30px 20px;
     }
@@ -389,8 +397,7 @@ footer p a:hover {
 
     .winnings-half .winning-hand-img {
         width: 90%;
-        
-    }
+    } 
 
     .error-pic img {
         width: 30%;
